--- a/Main.html
+++ b/Main.html
@@ -2,7 +2,7 @@
   "Visibility": "VISIBLE",
   "Title": "Update Musi Browser",
   "Description": "Tidak ada",
-  "MainTextButton": "Download",
+  "MainTextButton": "Dodjad",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "www.example.com",
