--- a/Main.html
+++ b/Main.html
@@ -2,9 +2,9 @@
   "Visibility": "VISIBLE",
   "Title": "Update Musi Browser",
   "Description": "Tidak ada",
-  "MainTextButton": "Dodjad",
+  "MainTextButton": "Download Web Tersebut",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "www.example.com",
-  "Version": "13.1"
+  "Version": "13.16997"
 }
