--- a/Main.html
+++ b/Main.html
@@ -1,10 +1,10 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Update Musi Browser",
+  "Title": "Update Musi Browiegser",
   "Description": "Tidak ada",
-  "MainTextButton": "Download Web Tersebut",
+  "MainTextButton": "Download Web Tersebiowut",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "www.example.com",
-  "Version": "13.16997"
+  "Version": "13.97"
 }
